# quantbot

./: .gitignore  .mcp.json  HOW_TO_USE_QUANTBOT.md  Makefile  README.md  pyproject.toml
configs/: default.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INTEGRATIONS.md  RESEARCH.md
scripts/: export_samples.py
src/quantbot/: __init__.py  cli.py  config.py  lifecycle.py  logging_setup.py
src/quantbot/analysis/: technical.py
src/quantbot/analytics/: bootstrap.py  metrics.py
src/quantbot/api/: server.py
src/quantbot/api/static/: app.js  desk.js  index.html  style.css
src/quantbot/backtest/: engine.py  trades.py  walkforward.py
src/quantbot/core/: clock.py  decisions.py  events.py  types.py
src/quantbot/execution/: base.py  live.py  modes.py  paper.py
src/quantbot/experiments/: tracker.py
src/quantbot/fairvalue/: base.py  digital_option.py  ensemble.py  market_models.py  vol.py
src/quantbot/features/: library.py
src/quantbot/markets/: base.py  crypto_spot.py  polymarket.py
src/quantbot/portfolio/: portfolio.py
src/quantbot/reporting/: daily.py
src/quantbot/risk/: limits.py  sizing.py
src/quantbot/runner/: paper.py
src/quantbot/strategies/: base.py  complement_arb.py  fair_value_deviation.py  mean_reversion.py  momentum.py  obi.py  registry.py
tests/: conftest.py  test_analysis.py  test_backtest.py  test_config.py  test_data.py  test_execution.py  test_fairvalue.py  test_markets.py  test_metrics.py  test_modes.py  test_platform.py  test_risk_portfolio.py  test_strategies.py  test_types.py  test_walkforward.py
